Remove the old ‘navigation’ size preview from the cropper - we no longer have that size on the site.

--- a/app/stylesheets/admin/design/_highlighted_documents.scss
+++ b/app/stylesheets/admin/design/_highlighted_documents.scss
@@ -303,14 +303,9 @@ $grey: #ccc;
       display: inline-block;
       overflow: hidden;
 
-      &.preview-lg {
+      &.preview-nav {
         height: 175px;
-        width: 400px;
-      }
-
-      &.preview-sm {
-        height: 61px;
-        width: 140px;
+        width: 393px;
       }
     }
   }
